--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </button>
             <div class="slider">
                 <div class="carousel owl-carousel"></div>
-                <div class="slide"><img src="salonimages/h3.jpg" alt="images 1"></div>
+                <div class="slide"><img src="salonimages/1000082054-01-min.jpg" alt="images 1"></div>
                 <!-- <div class="slide"><img src="salonimages/hairstyles2.jpg" alt=""></div> -->
                 <div class="slide"><img src="salonimages/L3.jpg" alt="image 3"></div>
                 <div class="slide"><img src="salonimages/makeup2.jpeg" alt="image 4"></div>
